[package]
name = "hello_world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
hyper-rustls = "0.27.2"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
